# FinanceApp

./: .gitignore  Notes.md  docker-compose.yml  endpoins.md  keep.jsx  sh.md  sqlcommands.md
backend/: .env  Pipfile  aa.py  db.sqlite3  example.py  pyproject.toml  requirements.txt  schema.yml
backend/backend/: asgi.py  celery.py  settings.py  urls.py  utils.py
backend/expense/: models.py  serializers.py  urls.py  views.py
backend/expense/migrations/: 0001_initial.py  0002_alter_transaction_category.py  0003_alter_transaction_category.py
backend/expense/scripts/: orm.py  orm2.py
backend/expense/services/: api_service.py
backend/portfolio/: consumers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/portfolio/migrations/: 0001_initial.py  0002_remove_stock_currency_remove_stock_logo_url.py  0002_remove_stock_currency_remove_stock_logo_url_and_more.py  0003_alter_stock_id_alter_stock_symbol.py  0004_alter_stock_symbol.py  0005_alter_stock_exchange_alter_stock_sector.py
backend/portfolio/scripts/: compete.py  dummy_data_creation.py  first.py  portfolio_analysis.py  second.py
backend/portfolio/services/: portfolio_service.py
backend/portfolio/utils/: finnhub.py  groq.py  sector_map.py
backend/stock/: models.py  serializers.py  urls.py  views.py
backend/stock/migrations/: 0001_initial.py  0002_remove_stockdata_open_price_stockdata_open_and_more.py  0003_rename_open_stockdata_open_price.py  0004_alter_stockdata_symbol.py
backend/user/: error_codes.py  models.py  serializers.py  tasks.py  throttles.py  urls.py  utils.py  views.py
(+97 files in other folders)
